--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="header-content">
       <div class="wrapper">
-        <img src="img/logo-big-v3.png" alt="Het logo van DeveloperLand met een draaimolen, kasteel, achtbaan en tot slot een gezin op de voorgrond." class="logo hidden-on-sm">
+        <img src="images/logo-big-v3.png" alt="Het logo van DeveloperLand met een draaimolen, kasteel, achtbaan en tot slot een gezin op de voorgrond." class="logo hidden-on-sm">
         <h1 class="hidden-on-lg">DeveloperLand</h1>
       </div>
     </div>
@@ -46,24 +46,24 @@
           Of neem een abonnement, want met slechts 4 bezoekjes ben je al voordeliger uit!
         </p>
         <p>
-          <button>Bestel een abonnement (&auro; 99 per jaar)</button>
+          <button>Bestel een abonnement (&euro; 99 per jaar)</button>
         </p>
       </article>
       <article>
         <h2>Merchandise</h2>
         <div class="row">
           <div class="product">
-            <img src="merchandise/mok.JPG" alt="Een mok van DeveloperLand">
+            <img src="images/merchandise/mok.jpg" alt="Een mok van DeveloperLand">
             <span>Een mok met jouw eigen actiefoto erop!</span>
             <a href="product.html"><button>Bestel nu (&euro; 14,95)</button></a>
           </div>
           <div class="product">
-            <img src="merchandise/mok.JPG" alt="Een mok van DeveloperLand">
+            <img src="images/merchandise/mok.JPG" alt="Een mok van DeveloperLand">
             <span>Een mok met jouw eigen actiefoto erop!</span>
             <a href="product.html"><button>Bestel nu (&euro; 14,95)</button></a>
           </div>
           <div class="product">
-            <img src="merchandise/mok.JPG" alt="Een mok van DeveloperLand">
+            <img src="images/merchandise/mok.JPG" alt="Een mok van DeveloperLand">
             <span>Een mok met jouw eigen actiefoto erop!</span>
             <a href="product.html"><button>Bestel nu (&euro; 14,95)</button></a>
           </div>
