--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <h2 class="open-forever">Wij zijn &#8734; open!</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores dolor id doloremque accusamus quod. Repellat cupiditate unde aperiam, ex fugiat beatae fuga. Esse distinctio rerum expedita fuga libero adipisci quis!</p>
       </article>
-      <article class="emphasize">
+      <article class="cost-ticket">
         <h2>Koop nu je tickets</h2>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur, ad. Similique neque sequi quibusdam, harum ratione fugit quia cupiditate doloribus totam obcaecati perferendis asperiores necessitatibus, exercitationem pariatur magni, quaerat minima.</p>
         <p>
