--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores dolor id doloremque accusamus quod. Repellat cupiditate unde aperiam, ex fugiat beatae fuga. Esse distinctio rerum expedita fuga libero adipisci quis!</p>
         </article>
       </div>
+      <div class="row-bottom">
       <article>
           <h2 class="rides">Bekijk onze geweldige attracties</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores dolor id doloremque accusamus quod. Repellat cupiditate unde aperiam, ex fugiat beatae fuga. Esse distinctio rerum expedita fuga libero adipisci quis!</p>
@@ -35,6 +36,7 @@
       <article>
           <h2 class="open-forever">Wij zijn &#8734; open!</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores dolor id doloremque accusamus quod. Repellat cupiditate unde aperiam, ex fugiat beatae fuga. Esse distinctio rerum expedita fuga libero adipisci quis!</p>
+        </div>
       </article>
       <article class="cost-ticket">
         <h2>Koop nu je tickets</h2>
