--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </article>
       <article>
         <h2>Merchandise</h2>
-        <div class="row">
+        <div class="row-product">
           <div class="product">
             <img src="images/merchandise/mok.jpg" alt="Een mok van DeveloperLand">
             <span>Een mok met jouw eigen actiefoto erop!</span>
