--- a/product.html
+++ b/product.html
@@ -17,6 +17,11 @@
     </div>
   </header>
   <main>
+    <h2>DeveloperLand Mok</h2>
+   <img src="images/merchandise/mok.JPG" alt="Een mok van DeveloperLand">
+   <p><span>in het kort:</span> Een mok met jouw eigen actie foto erop</p>
+   <p><span>prijs: </span>&euro;14.95</p>
+   <p><span>Over dit product: </span>Lorem ipsum dolor sit amet consectetur adipisicing, elit. Recusandae, quas, voluptatem. Modi nemo esse, magnam quos impedit libero deserunt id eum repudiandae deleniti expedita beatae minima quibusdam voluptatibus voluptate officia.</p>
     
   </main>
   <footer>
