winkelwagen en mobile versies

--- a/cart.html
+++ b/cart.html
@@ -22,9 +22,36 @@
         <h2>Winkelwagentje</h2>
         <div>
           <span>Dit zijn alle producten die u gaat bestellen. Controleer een laatste keer of alles klopt en ga daarna verder met de grote groene knop.</span>
-          <!-- 
-            Winkelwagen hier
-          -->
+          <table>
+          <tr>
+            <th>product</th>
+            <th>prijs(enkel)</th> 
+            <th>aantal</th>
+            <th>Prijs totaal</th>
+          </tr>
+          <tr>
+            <td>Product Entreekaartje Kind t/m 3 jaar</td>
+            <td>€ 0</td>
+            <td>1</td>
+            <td>€ 0</td>
+          </tr>
+          <tr>
+            <td>Entreekaartje Regulier</td>
+            <td>€ 24,95</td>
+            <td>2</td>
+            <td>€ 49,90</td>
+          </tr>
+          <tr>
+            <td>Entreekaartje Senior</td>
+            <td>€ 14,95</td>
+            <td>1</td>
+            <td>€ 14.95</td>
+          </tr>
+        </table>
+        <h4>Totaal som</h4>
+        <h4 class="total-price">64.85</h4>
+        <h4>Incl belasting</h4>
+        
           
           <a href="payment.html"><button>Dit is correct, verder naar betaling</button></a>
         </div>
