--- a/payment.html
+++ b/payment.html
@@ -19,7 +19,7 @@
   <main>
     <div class="wrapper">
       <article>
-        <h2>Betaling afronden</h2>
+        <h2 class="payment-h2">Betaling afronden</h2>
         <span>Selecteer de manier waarop u de bestelling wilt betalen.</span>
         <div class="sidy-by-side">
           <div>
