added euro and mobile style to mok

--- a/cart.html
+++ b/cart.html
@@ -49,7 +49,7 @@
           </tr>
         </table>
         <h4>Totaal som</h4>
-        <h4 class="total-price">64.85</h4>
+        <h4 class="total-price">&euro;64.85</h4>
         <h4>Incl belasting</h4>
         
           
